--- a/eapi-android-sample/app/src/main/res/values/strings.xml
+++ b/eapi-android-sample/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">EapiBrightCoveAndroidPOC</string>
+    <string name="app_name">EAPI_Sample</string>
 </resources>
